project(CS321)

SET(CMAKE_CXX_STANDARD 23)

add_executable(w1a1 "week1-app1.cpp")
add_executable(w2a1 "week2-app1.cpp")
add_executable(w3a1 "week3-app1.cpp")
add_executable(w3a2 "week3-app2.cpp")
add_executable(w4a1 "week4-app1.cpp")
add_executable(w4a2 "week4-app2.cpp")
add_executable(w5a1 "week5-app1.cpp")
add_executable(w5a2 "week5-app2.cpp")
# week 6 was a holiday due to the Republic Day
add_executable(w7mt1 "week7-mt1.cpp")
add_executable(w8a1 "week8-app1.cpp")
add_executable(w8a2 "week8-app2.cpp")
add_executable(w9a1 "week9-app1.cpp")
add_executable(w10a1 "week10-app1.cpp")
add_executable(w10a2 "week10-app2.cpp")
add_executable(w10a3 "week10-app3.cpp")
add_executable(w10a4 "week10-app4.cpp")
add_executable(w11a1 "week11-app1.cpp")
